tests/typing/bad/testfile-continue-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
int main() { continue; }

